@@ -20,8 +20,8 @@ public class EventIn extends vrml.external.Node {
 
   // Get the type of this EventIn (specified in FieldTypes.java)
   //public int           getType() {
-  //return EventType;
- // }
+  //	return EventType;
+  //}
 	public int getIntType() {
 		return EventType;
 	}
