@@ -1,19 +1,33 @@
 package vrml.external.field;
 import vrml.external.field.FieldTypes;
-//JAS import vrml.external.Node;
-//JAS import vrml.external.Browser;
+import vrml.external.Node;
+import vrml.external.Browser;
 
 public class EventInMFVec2f extends EventIn {
 
   public EventInMFVec2f() { EventType = FieldTypes.MFVEC2F; }
 
-  public void          setValue() {
-    System.out.println ("ERROR: eventinMFVec2f Not Implemented");
+  public void          setValue(float[][] value) throws IllegalArgumentException {
+	int count;
+	if (value == null) {
+		throw new IllegalArgumentException();
+	}
+	Browser.newSendEvent(this,  " " + value.length);
+	for (count = 0; count < value.length; count++) {
+		if (value[count].length < 2) {
+			throw new IllegalArgumentException();
+		}
+		Browser.newSendEvent(this,  " " + value[count][0] + " " + value[count][1]);
+	}
+	
     return;
   }
 
-  public void          set1Value(int index) {
-    System.out.println ("ERROR: eventinMFVec2f.set1vanue Not Implemented");
+  public void          set1Value(int index, float value[]) throws IllegalArgumentException {
+	if ((value == null) || (index < 0) || (value.length < 2)) {
+		throw new IllegalArgumentException();
+	}
+	Browser.newSendEvent(this,  " " + index + " " + value[0] + " " + value[1]);
 
   return;
   }
